--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@clerk/themes": "^2.2.5",
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.10.0",
-    "@prisma/client": "^6.2.1",
+    "@prisma/client": "^6.12.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.0",
     "html2pdf.js": "^0.10.2",
     "inngest": "^3.29.3",
     "lucide-react": "^0.471.1",
@@ -50,7 +51,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
-    "prisma": "^6.2.1",
+    "prisma": "^6.12.0",
     "tailwindcss": "^3.4.1"
   }
 }
